--- a/index.html
+++ b/index.html
@@ -3,33 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kunal's GitHub Page</title>
+    <meta name="description" content="Resume of Kunal Chaturvedi">
+    <meta name="keywords" content="Kunal Chaturvedi, Machine Learning, AI, Research, Resume">
+    <title>Kunal Chaturvedi - Resume</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+            padding: 20px;
         }
         .container {
-            max-width: 800px;
-            margin: 50px auto;
+            max-width: 900px;
+            margin: auto;
             background: #fff;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         h1 {
+            color: #444;
+            font-size: 28px;
+            margin-bottom: 10px;
+        }
+        h2 {
+            font-size: 22px;
+            margin-top: 30px;
             color: #333;
+            border-bottom: 2px solid #ddd;
+            padding-bottom: 5px;
         }
         p {
             font-size: 16px;
             line-height: 1.6;
         }
-        a {
+        ul {
+            padding-left: 20px;
+        }
+        ul li {
+            margin-bottom: 10px;
+        }
+        .contact {
+            margin-bottom: 20px;
+        }
+        .contact a {
             color: #1e90ff;
             text-decoration: none;
         }
-        a:hover {
+        .contact a:hover {
             text-decoration: underline;
         }
     </style>
@@ -37,24 +57,70 @@
 <body>
 
 <div class="container">
-    <h1>Welcome to Kunal's GitHub Page</h1>
-    <p>Hello! This page showcases selected research work and projects by Kunal.</p>
+    <h1>Kunal Chaturvedi</h1>
+    <div class="contact">
+        <p><strong>Email:</strong> <a href="mailto:kunal.chaturvedi@uts.edu.au">kunal.chaturvedi@uts.edu.au</a></p>
+        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/your-link" target="_blank">LinkedIn Profile</a></p>
+        <p><strong>GitHub:</strong> <a href="https://github.com/your-profile" target="_blank">GitHub Profile</a></p>
+        <p><strong>Google Scholar:</strong> <a href="https://scholar.google.co.in/citations?user=nS_tLB0AAAAJ&hl=en&oi=ao" target="_blank">Google Scholar Profile</a></p>
+    </div>
+
+    <h2>Education</h2>
+    <p><strong>University of Technology Sydney (UTS), Australia</strong><br>
+       Ph.D. in Machine Learning (2023–Present)</p>
+    <ul>
+        <li>Thesis: <em>AI-enabled Nystagmus Detection and Classification for Diagnosing Positional Vertigo Syndromes</em></li>
+        <li>Advisors: Dr. Mukesh Prasad, Dr. Ali Braytee, A/Prof Miriam Welgampola</li>
+    </ul>
+
+    <p><strong>Delhi Technological University, India</strong><br>
+       Bachelor of Technology, Mathematics and Computing (2017–2021)</p>
+    <ul>
+        <li>CGPA: 8.34/10 (First Division with Distinction)</li>
+    </ul>
+
+    <h2>Research Experience</h2>
+    <p><strong>University of Technology Sydney, Australia</strong><br>
+       Visiting Scholar, School of Computer Science (July 2021–Present)</p>
+    <ul>
+        <li>Advisor: Dr. Mukesh Prasad</li>
+    </ul>
+
+    <p><strong>Delhi Technological University, India</strong><br>
+       Undergraduate Research Assistant, Biometric Research Laboratory (Feb 2019–Mar 2021)</p>
+    <ul>
+        <li>Advisor: Prof. Dinesh K. Vishwakarma</li>
+    </ul>
+
+    <h2>Professional Experience</h2>
+    <p><strong>PricewaterhouseCoopers (PwC), India</strong><br>
+       Associate, Data & Analytics (July 2021–May 2022)</p>
+    <ul>
+        <li>Implemented and supported end-to-end advanced analytics for an Oil & Gas company, from data extraction to reporting and automation using AI-enabled solutions.</li>
+    </ul>
 
     <h2>Selected Publications</h2>
     <ul>
-        <li><strong>Identification of cancer risk groups through multi-omics integration using autoencoder and tensor analysis</strong><br>
-            Published in Scientific Reports, May 2024</li>
-        <li><strong>A Novel Dual-Pipeline based Attention Mechanism for Multimodal Social Sentiment Analysis</strong><br>
-            Presented at the International World Wide Web Conference (WebConf) 2024</li>
-        <li><strong>SS-CPGAN: Self-Supervised Cut-and-Pasting Generative Adversarial Network for Object Segmentation</strong><br>
-            Published in Sensors, March 2023</li>
-        <li><strong>Detecting Human Falls in Poor Lighting: Object Detection and Tracking Approach for Indoor Safety</strong><br>
-            Published in Electronics, March 2023</li>
+        <li><strong>Identification of cancer risk groups through multi-omics integration using autoencoder and tensor analysis</strong> (Scientific Reports, May 2024)</li>
+        <li><strong>A Novel Dual-Pipeline based Attention Mechanism for Multimodal Social Sentiment Analysis</strong> (WebConf 2024)</li>
+        <li><strong>SS-CPGAN: Self-Supervised Cut-and-Pasting GAN for Object Segmentation</strong> (Sensors, March 2023)</li>
+        <li><strong>Detecting Human Falls in Poor Lighting: Object Detection and Tracking Approach for Indoor Safety</strong> (Electronics, March 2023)</li>
     </ul>
 
-    <h2>Contact</h2>
-    <p>If you have any questions or would like to collaborate, feel free to reach out via email:</p>
-    <p><a href="mailto:kunal.chaturvedi@uts.edu.au">kunal.chaturvedi@uts.edu.au</a></p>
+    <h2>Skills</h2>
+    <ul>
+        <li>Programming Languages: Python (PyTorch, Keras, Scikit-learn)</li>
+        <li>Tools: MySQL, JMP Software (SAS), Celonis</li>
+    </ul>
+
+    <h2>Awards</h2>
+    <ul>
+        <li>Spot Award 2022 - PwC India</li>
+        <li>Commendable Research Award, 2021 - Delhi Technological University</li>
+        <li>IEEE CIS Conference Travel Grant, 2021 - IJCNN</li>
+        <li>DTU Travel Grant, 2020 - BDET</li>
+    </ul>
+
 </div>
 
 </body>
