--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <h1>Kunal Chaturvedi</h1>
     <div class="contact">
         <p><strong>Email:</strong> <a href="mailto:kunal.chaturvedi@uts.edu.au">kunal.chaturvedi@uts.edu.au</a></p>
-        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/your-link" target="_blank">LinkedIn Profile</a></p>
-        <p><strong>GitHub:</strong> <a href="https://github.com/your-profile" target="_blank">GitHub Profile</a></p>
-        <p><strong>Google Scholar:</strong> <a href="https://scholar.google.co.in/citations?user=nS_tLB0AAAAJ&hl=en&oi=ao" target="_blank">Google Scholar Profile</a></p>
+        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/kunal-chaturvedi-207241196/" target="_blank">LinkedIn Profile</a></p>
+        <p><strong>Google Scholar:</strong> <a href="https://scholar.google.com.au/citations?user=nS_tLB0AAAAJ&hl=en" target="_blank">Google Scholar Profile</a></p>
+        <p><strong>ResearchGate:</strong> <a href="https://www.researchgate.net/profile/Kunal-Chaturvedi" target="_blank">ResearchGate Profile</a></p>
     </div>
 
     <h2>Education</h2>
