--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
     <h1>Kunal Chaturvedi</h1>
     <div class="contact">
         <p><strong>Email:</strong> <a href="mailto:kunal.chaturvedi@uts.edu.au">kunal.chaturvedi@uts.edu.au</a></p>
+        <p><strong>Phone:</strong> +61-469802889</p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/kunal-chaturvedi-207241196/" target="_blank">LinkedIn Profile</a></p>
         <p><strong>Google Scholar:</strong> <a href="https://scholar.google.com.au/citations?user=nS_tLB0AAAAJ&hl=en" target="_blank">Google Scholar Profile</a></p>
         <p><strong>ResearchGate:</strong> <a href="https://www.researchgate.net/profile/Kunal-Chaturvedi" target="_blank">ResearchGate Profile</a></p>
+        <p><strong>University Profile:</strong> <a href="https://profiles.uts.edu.au/kunal.chaturvedi" target="_blank">UTS Profile</a></p>
     </div>
 
     <h2>Education</h2>
@@ -99,12 +101,37 @@
         <li>Implemented and supported end-to-end advanced analytics for an Oil & Gas company, from data extraction to reporting and automation using AI-enabled solutions.</li>
     </ul>
 
+    <h2>Softwares Developed</h2>
+    <ul>
+        <li><strong>Eye Tracker:</strong> Developed an eye tracker software capable of recording and tracking pupil traces, calculating the slow phase velocity (SPV) of nystagmus, and generating detailed patient reports.</li>
+        <li><strong>SPV Profiler:</strong> Created software to analyze nystagmus from Omniax pupil traces and perform regression analysis for detailed SPV profiling.</li>
+    </ul>
+
     <h2>Selected Publications</h2>
     <ul>
         <li><strong>Identification of cancer risk groups through multi-omics integration using autoencoder and tensor analysis</strong> (Scientific Reports, May 2024)</li>
         <li><strong>A Novel Dual-Pipeline based Attention Mechanism for Multimodal Social Sentiment Analysis</strong> (WebConf 2024)</li>
         <li><strong>SS-CPGAN: Self-Supervised Cut-and-Pasting GAN for Object Segmentation</strong> (Sensors, March 2023)</li>
         <li><strong>Detecting Human Falls in Poor Lighting: Object Detection and Tracking Approach for Indoor Safety</strong> (Electronics, March 2023)</li>
+        <li><strong>Automated Threat Objects Detection with Synthetic Data for Real-Time X-ray Baggage Inspection</strong> (IJCNN, 2021)</li>
+        <li><strong>Zero-Shot Learning with Missing Attributes using Semantic Correlations</strong> (IJCNN, 2021)</li>
+        <li><strong>COVID-19 and its impact on education, social life, and mental health of students: A survey</strong> (Children and Youth Services Review, Feb 2021)</li>
+        <li><strong>Face Recognition in an Unconstrained Environment using ConvNet</strong> (BDET, 2020)</li>
+    </ul>
+
+    <h2>Research Projects</h2>
+    <ul>
+        <li><strong>Injured Worker Support System Evaluation</strong> (Oct 2023 – Nov 2023) - Collaborated with a healthcare provider to evaluate and recommend improvements for their digital assessment tool. Advisors: Dr. Mukesh Prasad, Dr. Ali Braytee, Dr. Gnana Bharathy.</li>
+        <li><strong>Filmic Identities in the Age of Deep Fake Technology</strong> (Sep 2022 – Dec 2022) - Collaboration work with the UTS School of Design to create an experience for users on Deep Fake technology. Advisors: Dr. Sara Oscar, Dr. Monica Monin, Dr. Andrew Burrell.</li>
+        <li><strong>Data Analytics and Insights of Occupational Violence for Uplifting OVS Data Informed Practice Capability</strong> (Oct 2022 – Dec 2022) - Worked with the UTS Transdisciplinary School and NSW Department of Education. Advisors: A/Prof Tony Huang, Dr. Ali Braytee.</li>
+        <li><strong>Fight Detection with Spatial and Channel-wise Attention-based ConvLSTM Model</strong> (Aug 2019 – Jan 2020) - Presented at RIISE 2020, IIIT-Delhi. Advisor: Prof. Dinesh K. Vishwakarma.</li>
+    </ul>
+
+    <h2>Academic Service</h2>
+    <ul>
+        <li>Paper Reviewer: IEEE Transactions on Cognitive and Developmental Systems (2020–2022)</li>
+        <li>Paper Reviewer: International Joint Conference on Neural Networks (2023, 2024)</li>
+        <li>Paper Reviewer: The Journal of Supercomputing (2024)</li>
     </ul>
 
     <h2>Skills</h2>
@@ -117,8 +144,8 @@
     <ul>
         <li>Spot Award 2022 - PwC India</li>
         <li>Commendable Research Award, 2021 - Delhi Technological University</li>
-        <li>IEEE CIS Conference Travel Grant, 2021 - IJCNN</li>
-        <li>DTU Travel Grant, 2020 - BDET</li>
+        <li>IEEE CIS Conference Participation and Travel Grant for IJCNN 2021</li>
+        <li>DTU Travel Grant for BDET 2020</li>
     </ul>
 
 </div>
