--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <h1>Kunal Chaturvedi</h1>
     <div class="contact">
         <p><strong>Email:</strong> <a href="mailto:kunal.chaturvedi@uts.edu.au">kunal.chaturvedi@uts.edu.au</a></p>
+        <p><strong>Phone:</strong> +61-469802889</p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/kunal-chaturvedi-207241196/" target="_blank">LinkedIn Profile</a></p>
         <p><strong>Google Scholar:</strong> <a href="https://scholar.google.com.au/citations?user=nS_tLB0AAAAJ&hl=en" target="_blank">Google Scholar Profile</a></p>
         <p><strong>ResearchGate:</strong> <a href="https://www.researchgate.net/profile/Kunal-Chaturvedi" target="_blank">ResearchGate Profile</a></p>
@@ -108,14 +109,22 @@
 
     <h2>Selected Publications</h2>
     <ul>
-        <li><strong>Identification of cancer risk groups through multi-omics integration using autoencoder and tensor analysis</strong> (Scientific Reports, May 2024)</li>
-        <li><strong>A Novel Dual-Pipeline based Attention Mechanism for Multimodal Social Sentiment Analysis</strong> (WebConf 2024)</li>
-        <li><strong>SS-CPGAN: Self-Supervised Cut-and-Pasting GAN for Object Segmentation</strong> (Sensors, March 2023)</li>
-        <li><strong>Detecting Human Falls in Poor Lighting: Object Detection and Tracking Approach for Indoor Safety</strong> (Electronics, March 2023)</li>
-        <li><strong>Automated Threat Objects Detection with Synthetic Data for Real-Time X-ray Baggage Inspection</strong> (IJCNN, 2021)</li>
-        <li><strong>Zero-Shot Learning with Missing Attributes using Semantic Correlations</strong> (IJCNN, 2021)</li>
-        <li><strong>COVID-19 and its impact on education, social life, and mental health of students: A survey</strong> (Children and Youth Services Review, Feb 2021)</li>
-        <li><strong>Face Recognition in an Unconstrained Environment using ConvNet</strong> (BDET, 2020)</li>
+        <li><strong>Identification of cancer risk groups through multi-omics integration using autoencoder and tensor analysis</strong> (Scientific Reports, May 2024)<br>
+            Co-authors: Ali Braytee, Sam He, Shuxian Tang, Yuxuan Sun, Xiaoying Jiang, Xuanding Yu, Inder Khatri, Kunal Chaturvedi, Mukesh Prasad, Ali Anaissi</li>
+        <li><strong>A Novel Dual-Pipeline based Attention Mechanism for Multimodal Social Sentiment Analysis</strong> (WebConf 2024)<br>
+            Co-authors: Ali Braytee, Andy Shueh-Chih Yang, Ali Anaissi, Kunal Chaturvedi, Mukesh Prasad</li>
+        <li><strong>SS-CPGAN: Self-Supervised Cut-and-Pasting GAN for Object Segmentation</strong> (Sensors, March 2023)<br>
+            Co-authors: Kunal Chaturvedi, Ali Braytee, Jun Li, Mukesh Prasad</li>
+        <li><strong>Detecting Human Falls in Poor Lighting: Object Detection and Tracking Approach for Indoor Safety</strong> (Electronics, March 2023)<br>
+            Co-authors: Xing Zi, Kunal Chaturvedi, Ali Braytee, Jun Li, Mukesh Prasad</li>
+        <li><strong>Automated Threat Objects Detection with Synthetic Data for Real-Time X-ray Baggage Inspection</strong> (IJCNN, 2021)<br>
+            Co-authors: Kunal Chaturvedi, Ali Braytee, Dinesh Kumar Vishwakarma, Muhammad Saqib, Domingo Mery, Mukesh Prasad</li>
+        <li><strong>Zero-Shot Learning with Missing Attributes using Semantic Correlations</strong> (IJCNN, 2021)<br>
+            Co-authors: Ali Braytee, Mohamad Naji, Ali Anaissi, Kunal Chaturvedi, Mukesh Prasad</li>
+        <li><strong>COVID-19 and its impact on education, social life, and mental health of students: A survey</strong> (Children and Youth Services Review, Feb 2021)<br>
+            Co-authors: Kunal Chaturvedi, Dinesh Kumar Vishwakarma, Nidhi Singh</li>
+        <li><strong>Face Recognition in an Unconstrained Environment using ConvNet</strong> (BDET, 2020)<br>
+            Co-authors: Kunal Chaturvedi, Dinesh Kumar Vishwakarma</li>
     </ul>
 
     <h2>Research Projects</h2>
@@ -126,27 +135,8 @@
         <li><strong>Fight Detection with Spatial and Channel-wise Attention-based ConvLSTM Model</strong> (Aug 2019 – Jan 2020) - Presented at RIISE 2020, IIIT-Delhi. Advisor: Prof. Dinesh K. Vishwakarma.</li>
     </ul>
 
-    <h2>Academic Service</h2>
-    <ul>
-        <li>Paper Reviewer: IEEE Transactions on Cognitive and Developmental Systems (2020–2022)</li>
-        <li>Paper Reviewer: International Joint Conference on Neural Networks (2023, 2024)</li>
-        <li>Paper Reviewer: The Journal of Supercomputing (2024)</li>
-    </ul>
-
-    <h2>Skills</h2>
-    <ul>
-        <li>Programming Languages: Python (PyTorch, Keras, Scikit-learn)</li>
-        <li>Tools: MySQL, JMP Software (SAS), Celonis</li>
-    </ul>
-
-    <h2>Awards</h2>
-    <ul>
-        <li>Spot Award 2022 - PwC India</li>
-        <li>Commendable Research Award, 2021 - Delhi Technological University</li>
-        <li>IEEE CIS Conference Participation and Travel Grant for IJCNN 2021</li>
-        <li>DTU Travel Grant for BDET 2020</li>
-    </ul>
-
+    
+    
 </div>
 
 </body>
