--- a/index.html
+++ b/index.html
@@ -73,12 +73,7 @@
         <li>Advisors: Dr. Mukesh Prasad, Dr. Ali Braytee, A/Prof Miriam Welgampola</li>
     </ul>
 
-    <p><strong>Delhi Technological University, India</strong><br>
-       Bachelor of Technology, Mathematics and Computing (2017–2021)</p>
-    <ul>
-        <li>CGPA: 8.34/10 (First Division with Distinction)</li>
-    </ul>
-
+    
     <h2>Research Experience</h2>
     <p><strong>University of Technology Sydney, Australia</strong><br>
        Visiting Scholar, School of Computer Science (July 2021–Present)</p>
@@ -108,21 +103,21 @@
     <h2>Selected Publications</h2>
     <ul>
         <li><strong>Identification of cancer risk groups through multi-omics integration using autoencoder and tensor analysis</strong> (Scientific Reports, May 2024)<br>
-            Co-authors: Ali Braytee, Sam He, Shuxian Tang, Yuxuan Sun, Xiaoying Jiang, Xuanding Yu, Inder Khatri, Kunal Chaturvedi, Mukesh Prasad, Ali Anaissi</li>
+            Ali Braytee, Sam He, Shuxian Tang, Yuxuan Sun, Xiaoying Jiang, Xuanding Yu, Inder Khatri, Kunal Chaturvedi, Mukesh Prasad, Ali Anaissi</li>
         <li><strong>A Novel Dual-Pipeline based Attention Mechanism for Multimodal Social Sentiment Analysis</strong> (WebConf 2024)<br>
-            Co-authors: Ali Braytee, Andy Shueh-Chih Yang, Ali Anaissi, Kunal Chaturvedi, Mukesh Prasad</li>
+            Ali Braytee, Andy Shueh-Chih Yang, Ali Anaissi, Kunal Chaturvedi, Mukesh Prasad</li>
         <li><strong>SS-CPGAN: Self-Supervised Cut-and-Pasting GAN for Object Segmentation</strong> (Sensors, March 2023)<br>
-            Co-authors: Kunal Chaturvedi, Ali Braytee, Jun Li, Mukesh Prasad</li>
+            Kunal Chaturvedi, Ali Braytee, Jun Li, Mukesh Prasad</li>
         <li><strong>Detecting Human Falls in Poor Lighting: Object Detection and Tracking Approach for Indoor Safety</strong> (Electronics, March 2023)<br>
-            Co-authors: Xing Zi, Kunal Chaturvedi, Ali Braytee, Jun Li, Mukesh Prasad</li>
+            Xing Zi, Kunal Chaturvedi, Ali Braytee, Jun Li, Mukesh Prasad</li>
         <li><strong>Automated Threat Objects Detection with Synthetic Data for Real-Time X-ray Baggage Inspection</strong> (IJCNN, 2021)<br>
-            Co-authors: Kunal Chaturvedi, Ali Braytee, Dinesh Kumar Vishwakarma, Muhammad Saqib, Domingo Mery, Mukesh Prasad</li>
+            Kunal Chaturvedi, Ali Braytee, Dinesh Kumar Vishwakarma, Muhammad Saqib, Domingo Mery, Mukesh Prasad</li>
         <li><strong>Zero-Shot Learning with Missing Attributes using Semantic Correlations</strong> (IJCNN, 2021)<br>
-            Co-authors: Ali Braytee, Mohamad Naji, Ali Anaissi, Kunal Chaturvedi, Mukesh Prasad</li>
+            Ali Braytee, Mohamad Naji, Ali Anaissi, Kunal Chaturvedi, Mukesh Prasad</li>
         <li><strong>COVID-19 and its impact on education, social life, and mental health of students: A survey</strong> (Children and Youth Services Review, Feb 2021)<br>
-            Co-authors: Kunal Chaturvedi, Dinesh Kumar Vishwakarma, Nidhi Singh</li>
+            Kunal Chaturvedi, Dinesh Kumar Vishwakarma, Nidhi Singh</li>
         <li><strong>Face Recognition in an Unconstrained Environment using ConvNet</strong> (BDET, 2020)<br>
-            Co-authors: Kunal Chaturvedi, Dinesh Kumar Vishwakarma</li>
+            Kunal Chaturvedi, Dinesh Kumar Vishwakarma</li>
     </ul>
 
     <h2>Research Projects</h2>
