--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
     <ul>
         <li><strong>Identification of cancer risk groups through multi-omics integration using autoencoder and tensor analysis</strong> (Scientific Reports, May 2024)<br>
             Ali Braytee, Sam He, Shuxian Tang, Yuxuan Sun, Xiaoying Jiang, Xuanding Yu, Inder Khatri, Kunal Chaturvedi, Mukesh Prasad, Ali Anaissi</li>
-        <li><strong>A Novel Dual-Pipeline based Attention Mechanism for Multimodal Social Sentiment Analysis</strong> (WebConf 2024)<br>
+        <li><strong>A Novel Dual-Pipeline based Attention Mechanism for Multimodal Social Sentiment Analysis</strong> (Expert Systems, 2024)<br>
             Ali Braytee, Andy Shueh-Chih Yang, Ali Anaissi, Kunal Chaturvedi, Mukesh Prasad</li>
+        <li><strong>Fight detection with spatial and channel wise attention‐based ConvLSTM model</strong> (WebConf 2024)<br>
+            Kunal Chaturvedi, Chhavi Dhiman, Dinesh Kumar Vishwakarma</li>
         <li><strong>SS-CPGAN: Self-Supervised Cut-and-Pasting GAN for Object Segmentation</strong> (Sensors, March 2023)<br>
             Kunal Chaturvedi, Ali Braytee, Jun Li, Mukesh Prasad</li>
         <li><strong>Detecting Human Falls in Poor Lighting: Object Detection and Tracking Approach for Indoor Safety</strong> (Electronics, March 2023)<br>
