--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Resume of Kunal Chaturvedi">
-    <meta name="keywords" content="Kunal Chaturvedi, Machine Learning, AI, Research, Resume">
-    <title>Kunal Chaturvedi - Resume</title>
+    <meta name="keywords" content="Kunal Chaturvedi, Machine Learning, AI, Research, uts">
+    <title>PhD Researcher | AI for Healthcare Diagnostics | UTS</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,6 +58,7 @@
 
 <div class="container">
     <h1>Kunal Chaturvedi</h1>
+    <p><strong>PhD Researcher, University of Technology Sydney</strong></p>
     <div class="contact">
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/kunal-chaturvedi-207241196/" target="_blank">LinkedIn Profile</a></p>
         <p><strong>Google Scholar:</strong> <a href="https://scholar.google.com.au/citations?user=nS_tLB0AAAAJ&hl=en" target="_blank">Google Scholar Profile</a></p>
@@ -103,23 +104,23 @@
     <h2>Selected Publications</h2>
     <ul>
         <li><strong>Identification of cancer risk groups through multi-omics integration using autoencoder and tensor analysis</strong> (Scientific Reports, May 2024)<br>
-            Ali Braytee, Sam He, Shuxian Tang, Yuxuan Sun, Xiaoying Jiang, Xuanding Yu, Inder Khatri, Kunal Chaturvedi, Mukesh Prasad, Ali Anaissi</li>
+            Ali Braytee, Sam He, Shuxian Tang, Yuxuan Sun, Xiaoying Jiang, Xuanding Yu, Inder Khatri, <b>Kunal Chaturvedi</b>, Mukesh Prasad, Ali Anaissi</li>
         <li><strong>A Novel Dual-Pipeline based Attention Mechanism for Multimodal Social Sentiment Analysis</strong> (Expert Systems, 2024)<br>
-            Ali Braytee, Andy Shueh-Chih Yang, Ali Anaissi, Kunal Chaturvedi, Mukesh Prasad</li>
+            Ali Braytee, Andy Shueh-Chih Yang, Ali Anaissi, <b>Kunal Chaturvedi</b>, Mukesh Prasad</li>
         <li><strong>Fight detection with spatial and channel wise attention‐based ConvLSTM model</strong> (WebConf 2024)<br>
-            Kunal Chaturvedi, Chhavi Dhiman, Dinesh Kumar Vishwakarma</li>
+            <b>Kunal Chaturvedi</b>, Chhavi Dhiman, Dinesh Kumar Vishwakarma</li>
         <li><strong>SS-CPGAN: Self-Supervised Cut-and-Pasting GAN for Object Segmentation</strong> (Sensors, March 2023)<br>
-            Kunal Chaturvedi, Ali Braytee, Jun Li, Mukesh Prasad</li>
+            <b>Kunal Chaturvedi</b>, Ali Braytee, Jun Li, Mukesh Prasad</li>
         <li><strong>Detecting Human Falls in Poor Lighting: Object Detection and Tracking Approach for Indoor Safety</strong> (Electronics, March 2023)<br>
-            Xing Zi, Kunal Chaturvedi, Ali Braytee, Jun Li, Mukesh Prasad</li>
+            Xing Zi, <b>Kunal Chaturvedi</b>, Ali Braytee, Jun Li, Mukesh Prasad</li>
         <li><strong>Automated Threat Objects Detection with Synthetic Data for Real-Time X-ray Baggage Inspection</strong> (IJCNN, 2021)<br>
-            Kunal Chaturvedi, Ali Braytee, Dinesh Kumar Vishwakarma, Muhammad Saqib, Domingo Mery, Mukesh Prasad</li>
+            <b>Kunal Chaturvedi</b>, Ali Braytee, Dinesh Kumar Vishwakarma, Muhammad Saqib, Domingo Mery, Mukesh Prasad</li>
         <li><strong>Zero-Shot Learning with Missing Attributes using Semantic Correlations</strong> (IJCNN, 2021)<br>
-            Ali Braytee, Mohamad Naji, Ali Anaissi, Kunal Chaturvedi, Mukesh Prasad</li>
+            Ali Braytee, Mohamad Naji, Ali Anaissi, <b>Kunal Chaturvedi</b>, Mukesh Prasad</li>
         <li><strong>COVID-19 and its impact on education, social life, and mental health of students: A survey</strong> (Children and Youth Services Review, Feb 2021)<br>
-            Kunal Chaturvedi, Dinesh Kumar Vishwakarma, Nidhi Singh</li>
+            <b>Kunal Chaturvedi</b>, Dinesh Kumar Vishwakarma, Nidhi Singh</li>
         <li><strong>Face Recognition in an Unconstrained Environment using ConvNet</strong> (BDET, 2020)<br>
-            Kunal Chaturvedi, Dinesh Kumar Vishwakarma</li>
+            <b>Kunal Chaturvedi</b>, Dinesh Kumar Vishwakarma</li>
     </ul>
 
     <h2>Research Projects</h2>
