--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Resume of Kunal Chaturvedi">
+    <meta name="description" content="Kunal Chaturvedi is a PhD researcher in the School of Computer Science at the University of Technology Sydney (UTS), Australia.">
     <meta name="keywords" content="Kunal Chaturvedi, Machine Learning, AI, Research, uts">
-    <title>PhD Researcher | AI for Healthcare Diagnostics | UTS</title>
+    <title>Kunal Chaturvedi</title>
     <style>
         body {
             font-family: Arial, sans-serif;
