--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <body>
 
 <div class="container">
+    <img src="images/profile.jpg" alt="Kunal Chaturvedi" width="200" height="200">
     <h1>Kunal Chaturvedi</h1>
     <p><strong>PhD Researcher, University of Technology Sydney</strong></p>
     <div class="contact">
